@@ -31,7 +31,8 @@ paranoia_config.h: pre_config.h
 	$(sedpath) 's/\#define PACKAGE/\#define PARANOIA/g' pre_config.h > $@
 
 EXTRA_DIST = \
-	HACKING
+	HACKING \
+	INFO
 
 DISTCLEANFILES= \
 	paranoia_config.h
